@@ -1,15 +1,12 @@
 package com.coffee_backend.service;
 
 import com.coffee_backend.dto.CreateOrderRequest;
-import com.coffee_backend.dto.OrderItemResponse;
 import com.coffee_backend.dto.OrderResponse;
 import com.coffee_backend.entity.CoffeeBean;
 import com.coffee_backend.entity.Order;
-import com.coffee_backend.entity.OrderItem;
 import com.coffee_backend.entity.User;
 import com.coffee_backend.enumType.OrderStatus;
 import com.coffee_backend.repo.CoffeeBeanRepository;
-import com.coffee_backend.repo.OrderItemRepository;
 import com.coffee_backend.repo.OrderRepository;
 import com.coffee_backend.repo.UserRepository;
 import com.coffee_backend.util.JwtUtil;
@@ -20,13 +17,13 @@ import org.springframework.transaction.annotation.Transactional;
 import com.coffee_backend.exception.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class OrderService {
     @Autowired
     private OrderRepository orderRepository;
-    @Autowired
-    private OrderItemRepository orderItemRepository;
+
     @Autowired
     private CoffeeBeanRepository coffeeBeanRepository;
 
@@ -52,58 +49,56 @@ public class OrderService {
         if (coffeeBean.getBagStock() < req.getQuantity()) {
             throw new BadRequestException("库存不足");
         }
+        // 库存-1
         coffeeBean.setBagStock(coffeeBean.getBagStock() - req.getQuantity());
-        Double totalAmount = coffeeBean.getPricePerBag() * req.getQuantity();
+
 
         // 创建订单
         Order order = new Order();
-        order.setBuyer(user);
-        order.setTotalAmount(totalAmount);
+        order.setUser(user);
         order.setStatus(OrderStatus.PAID);
+        order.setCoffeeBean(coffeeBean);
+        order.setQuantity(req.getQuantity());
+        order.setContactNumber(req.getContactNumber());
+        order.setShippingAddress(req.getShippingAddress());
+        order.setRecipientName(req.getRecipientName());
+
         order = orderRepository.save(order);
 
-        // 创建订单项
-        OrderItem item = new OrderItem();
-        item.setOrder(order);
-        item.setCoffeeBean(coffeeBean);
-        item.setQuantity(req.getQuantity());
-        item.setPricePerBag(coffeeBean.getPricePerBag());
-        item.setSubtotal(coffeeBean.getPricePerBag() * req.getQuantity());
-        orderItemRepository.save(item);
 
-        OrderItemResponse orderItemResponse = OrderItemResponse.builder()
-                .id(item.getId())
-                .coffeeBeanId(item.getCoffeeBean().getId())
-                .coffeeBeanName(item.getCoffeeBean().getName())
-                .quantity(item.getQuantity())
-                .pricePerBag(item.getPricePerBag())
-                .subtotal(item.getSubtotal())
-                .build();
-
-        OrderResponse orderResponse = OrderResponse.builder()
+        return OrderResponse.builder()
                 .id(order.getId())
+                .coffeeBeanId(coffeeBean.getId())
+                .coffeeBeanName(coffeeBean.getName())
+                .coffeeBeanImageUrl(order.getCoffeeBean().getImageUrl())
+                .quantity(order.getQuantity())
                 .totalAmount(order.getTotalAmount())
                 .status(order.getStatus())
                 .orderTime(order.getOrderTime())
-                .items(List.of(orderItemResponse))
+                .shippingAddress(order.getShippingAddress())
+                .contactNumber(order.getContactNumber())
+                .recipientName(order.getRecipientName())
                 .build();
-        return orderResponse;
     }
 
     /** 获取当前登录用户自己的订单 */
     @Transactional(readOnly = true)
     public List<OrderResponse> listMyOrders() {
         Long userId = getCurrentUserId();
-        List<Order> orderList = orderRepository.findByBuyer_IdOrderByOrderTimeDesc(userId);
-        List<OrderResponse> orderResponses = orderList.stream().map(order -> OrderResponse.builder()
+        List<Order> orderList = orderRepository.findByUser_IdOrderByOrderTimeDesc(userId);
+        return orderList.stream().map(order -> OrderResponse.builder()
                 .id(order.getId())
+                .coffeeBeanId(order.getCoffeeBean().getId())
+                .coffeeBeanName(order.getCoffeeBean().getName())
+                .coffeeBeanImageUrl(order.getCoffeeBean().getImageUrl())
+                .quantity(order.getQuantity())
                 .totalAmount(order.getTotalAmount())
                 .status(order.getStatus())
                 .orderTime(order.getOrderTime())
-                .build()).toList();
-
-
-        return orderResponses;
+                .shippingAddress(order.getShippingAddress())
+                .contactNumber(order.getContactNumber())
+                .recipientName(order.getRecipientName())
+                .build()).collect(Collectors.toList());
     }
 
     private Long getCurrentUserId() {
@@ -111,33 +106,30 @@ public class OrderService {
         return jwtUtil.getUserIdFromToken(bearer.substring(7));
     }
 
-
-    /** 查询当前用户某订单，若非本人则抛异常 */
+    // 查询用户本人订单细节
     public OrderResponse getOrderDetail(Long orderId) {
         Long currentUserId = getCurrentUserId();
 
         Order order = orderRepository.findById(orderId).orElseThrow(() -> new NotFoundException("订单不存在"));
-        if (!order.getBuyer().getId().equals(currentUserId)) {
+        if (!order.getUser().getId().equals(currentUserId)) {
             throw new ForbiddenException("无权限查看该订单");
         }
-        OrderItem orderItem = orderItemRepository.findById(order.getItems().get(0).getId()).orElseThrow(() -> new NotFoundException("订单项不存在"));
-        OrderItemResponse orderItemResponse = OrderItemResponse.builder()
-                .id(orderItem.getId())
-                .coffeeBeanId(orderItem.getCoffeeBean().getId())
-                .coffeeBeanName(orderItem.getCoffeeBean().getName())
-                .quantity(orderItem.getQuantity())
-                .pricePerBag(orderItem.getPricePerBag())
-                .subtotal(orderItem.getSubtotal())
-                .build();
-        OrderResponse orderResponse = OrderResponse.builder()
+        return OrderResponse.builder()
                 .id(order.getId())
+                .coffeeBeanId(order.getCoffeeBean().getId())
+                .coffeeBeanName(order.getCoffeeBean().getName())
+                .coffeeBeanImageUrl(order.getCoffeeBean().getImageUrl())
+                .quantity(order.getQuantity())
                 .totalAmount(order.getTotalAmount())
                 .status(order.getStatus())
                 .orderTime(order.getOrderTime())
-                .items(List.of(orderItemResponse))
+                .shippingAddress(order.getShippingAddress())
+                .contactNumber(order.getContactNumber())
+                .recipientName(order.getRecipientName())
                 .build();
 
-        return orderResponse;
+
+
 
     }
 
@@ -148,13 +140,21 @@ public class OrderService {
                 .orElseThrow(() -> new NotFoundException("农户不存在"));
 
         List<Order> orders = orderRepository.findAllForFarmer(farmerId);
-        List<OrderResponse> orderResponses = orders.stream().map(order -> OrderResponse.builder()
+
+        return orders.stream().map(order -> OrderResponse.builder()
                 .id(order.getId())
+                .coffeeBeanId(order.getCoffeeBean().getId())
+                .coffeeBeanName(order.getCoffeeBean().getName())
+                .coffeeBeanImageUrl(order.getCoffeeBean().getImageUrl())
+                .quantity(order.getQuantity())
                 .totalAmount(order.getTotalAmount())
                 .status(order.getStatus())
                 .orderTime(order.getOrderTime())
-                .build()).toList();
-        return orderResponses;
+                .shippingAddress(order.getShippingAddress())
+                .contactNumber(order.getContactNumber())
+                .recipientName(order.getRecipientName())
+                .build()).collect(Collectors.toList());
+
     }
 
 
@@ -164,28 +164,31 @@ public class OrderService {
     @Transactional
     public void shipOrder(Long orderId) {
 
-        // 1️⃣ 当前登录用户（农户）ID
+        // 当前登录用户（农户）ID
         Long farmerId = getCurrentUserId();
 
-        // 2️⃣ 取订单 & 校验归属
+        // 取订单 & 校验归属
         Order order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new NotFoundException("订单不存在"));
 
-        // 农庄归属校验：只要订单里有一件商品来自该农户就允许发货
-        boolean belongsToFarmer = order.getItems().stream()
-                .anyMatch(item -> item.getCoffeeBean()
-                        .getFarm().getUser().getId().equals(farmerId));
+        // 农庄归属校验
+        boolean belongsToFarmer = order.getCoffeeBean()
+                .getFarm()
+                .getUser()
+                .getId()
+                .equals(farmerId);
+
 
         if (!belongsToFarmer) {
             throw new ForbiddenException("该订单不属于你的农庄");
         }
 
-        // 3️⃣ 只有待发货(PAID) 才能发货
+        // 只有待发货(PAID) 才能发货
         if (order.getStatus() != OrderStatus.PAID) {
             throw new BadRequestException("当前状态不可发货");
         }
 
-        // 4️⃣ 更新状态
+        // 更新状态
         order.setStatus(OrderStatus.SHIPPED);
         orderRepository.save(order);
     }
